horizontal scroll bugfix

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer base {
   body {
-    @apply font-body text-white bg-background-900 min-h-screen w-screen;
+    @apply font-body text-white bg-background-900 min-h-screen max-w-[100vw];
   }
 
   h1,
